<resources>
    <string name="app_name">Lesson_1_Engurazov</string>
    <string name="btn_screen_1_text">Экран 1</string>
    <string name="btn_screen_2_text">Экран 2</string>
    <string name="save_btn_text">Save</string>
    <string name="show_btn_text">Show</string>
    <string name="name_et_hint">Name</string>
    <string name="name_list_tv_text">Список учеников</string>
    <string name="student_info_et_hint">Name Surname Grade BirthdayYear</string>
    <string name="show_data_btn_text">Show student data</string>
    <string name="tv_data_text">Student data</string>
</resources>
